--- a/src/api_emd.ipynb
+++ b/src/api_emd.ipynb
@@ -44,7 +44,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hypothesis\n"
+    "## Hypothesis:\n",
+    "\n",
+    "This study seeks to investigate the impact of key health-related features, including plasma glucose levels, blood pressure, and body mass index (BMI), on the probability of a patient developing sepsis within the intensive care unit (ICU). We hypothesize that variations in these specific health indicators will exhibit statistically significant correlations with the likelihood of sepsis occurrence. By analyzing these relationships, we aim to identify crucial factors contributing to the development of sepsis, thereby informing more targeted and effective medical interventions in the ICU setting"
    ]
   },
   {
