--- a/src/api_emd.ipynb
+++ b/src/api_emd.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,13 +118,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Loading the train data set and the test data set\n",
-    "train_path = \"G:\\AZUBI-AFRICA\\CAREER_ACCELERATOR_ALL_OUT\\LP6_API_BUILDING\\lp6_building_api\\data\\Paitients_Files_Train.csv\"\n",
-    "test_path =  \"G:\\AZUBI-AFRICA\\CAREER_ACCELERATOR_ALL_OUT\\LP6_API_BUILDING\\lp6_building_api\\data\\Paitients_Files_Test.csv\"\n",
+    "train_path = \"../data/Paitients_Files_Train.csv\"\n",
+    "test_path = \"../data/Paitients_Files_Test.csv\"\n",
     "\n",
     "df_train =  pd.read_csv(train_path)\n",
     "\n",
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -156,21 +156,22 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 599 entries, 0 to 598\n",
-      "Data columns (total 10 columns):\n",
+      "Data columns (total 11 columns):\n",
       " #   Column     Non-Null Count  Dtype  \n",
       "---  ------     --------------  -----  \n",
-      " 0   PRG        599 non-null    int64  \n",
-      " 1   PL         599 non-null    int64  \n",
-      " 2   PR         599 non-null    int64  \n",
-      " 3   SK         599 non-null    int64  \n",
-      " 4   TS         599 non-null    int64  \n",
-      " 5   M11        599 non-null    float64\n",
-      " 6   BD2        599 non-null    float64\n",
-      " 7   Age        599 non-null    int64  \n",
-      " 8   Insurance  599 non-null    int64  \n",
-      " 9   Sepssis    599 non-null    object \n",
-      "dtypes: float64(2), int64(7), object(1)\n",
-      "memory usage: 46.9+ KB\n"
+      " 0   ID         599 non-null    object \n",
+      " 1   PRG        599 non-null    int64  \n",
+      " 2   PL         599 non-null    int64  \n",
+      " 3   PR         599 non-null    int64  \n",
+      " 4   SK         599 non-null    int64  \n",
+      " 5   TS         599 non-null    int64  \n",
+      " 6   M11        599 non-null    float64\n",
+      " 7   BD2        599 non-null    float64\n",
+      " 8   Age        599 non-null    int64  \n",
+      " 9   Insurance  599 non-null    int64  \n",
+      " 10  Sepssis    599 non-null    object \n",
+      "dtypes: float64(2), int64(7), object(2)\n",
+      "memory usage: 51.6+ KB\n"
      ]
     }
    ],
@@ -180,7 +181,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(599, 11)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -288,32 +309,125 @@
        "      <td>1</td>\n",
        "      <td>Positive</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>ICU200105</td>\n",
+       "      <td>6</td>\n",
+       "      <td>144</td>\n",
+       "      <td>72</td>\n",
+       "      <td>27</td>\n",
+       "      <td>228</td>\n",
+       "      <td>33.9</td>\n",
+       "      <td>0.255</td>\n",
+       "      <td>40</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>ICU200106</td>\n",
+       "      <td>2</td>\n",
+       "      <td>92</td>\n",
+       "      <td>62</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>31.6</td>\n",
+       "      <td>0.130</td>\n",
+       "      <td>24</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>ICU200107</td>\n",
+       "      <td>1</td>\n",
+       "      <td>71</td>\n",
+       "      <td>48</td>\n",
+       "      <td>18</td>\n",
+       "      <td>76</td>\n",
+       "      <td>20.4</td>\n",
+       "      <td>0.323</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>ICU200108</td>\n",
+       "      <td>6</td>\n",
+       "      <td>93</td>\n",
+       "      <td>50</td>\n",
+       "      <td>30</td>\n",
+       "      <td>64</td>\n",
+       "      <td>28.7</td>\n",
+       "      <td>0.356</td>\n",
+       "      <td>23</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>ICU200109</td>\n",
+       "      <td>1</td>\n",
+       "      <td>122</td>\n",
+       "      <td>90</td>\n",
+       "      <td>51</td>\n",
+       "      <td>220</td>\n",
+       "      <td>49.7</td>\n",
+       "      <td>0.325</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Positive</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>100 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          ID  PRG   PL  PR  SK   TS   M11    BD2  Age  Insurance   Sepssis\n",
-       "0  ICU200010    6  148  72  35    0  33.6  0.627   50          0  Positive\n",
-       "1  ICU200011    1   85  66  29    0  26.6  0.351   31          0  Negative\n",
-       "2  ICU200012    8  183  64   0    0  23.3  0.672   32          1  Positive\n",
-       "3  ICU200013    1   89  66  23   94  28.1  0.167   21          1  Negative\n",
-       "4  ICU200014    0  137  40  35  168  43.1  2.288   33          1  Positive"
+       "           ID  PRG   PL  PR  SK   TS   M11    BD2  Age  Insurance   Sepssis\n",
+       "0   ICU200010    6  148  72  35    0  33.6  0.627   50          0  Positive\n",
+       "1   ICU200011    1   85  66  29    0  26.6  0.351   31          0  Negative\n",
+       "2   ICU200012    8  183  64   0    0  23.3  0.672   32          1  Positive\n",
+       "3   ICU200013    1   89  66  23   94  28.1  0.167   21          1  Negative\n",
+       "4   ICU200014    0  137  40  35  168  43.1  2.288   33          1  Positive\n",
+       "..        ...  ...  ...  ..  ..  ...   ...    ...  ...        ...       ...\n",
+       "95  ICU200105    6  144  72  27  228  33.9  0.255   40          1  Negative\n",
+       "96  ICU200106    2   92  62  28    0  31.6  0.130   24          1  Negative\n",
+       "97  ICU200107    1   71  48  18   76  20.4  0.323   22          1  Negative\n",
+       "98  ICU200108    6   93  50  30   64  28.7  0.356   23          0  Negative\n",
+       "99  ICU200109    1  122  90  51  220  49.7  0.325   31          0  Positive\n",
+       "\n",
+       "[100 rows x 11 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# looking at the head of the train set \n",
-    "df_train.head()"
+    "df_train.head(100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +462,7 @@
        "array([0, 1], dtype=int64)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +492,7 @@
        "      dtype=int64)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +520,7 @@
        "array(['Positive', 'Negative'], dtype=object)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +588,7 @@
        "freq         391"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +618,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +638,7 @@
        "0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -594,14 +708,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\BAKU\\AppData\\Local\\Temp\\ipykernel_25224\\2511894563.py:4: FutureWarning: \n",
+      "C:\\Users\\BAKU\\AppData\\Local\\Temp\\ipykernel_20984\\2511894563.py:4: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -647,14 +761,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\BAKU\\AppData\\Local\\Temp\\ipykernel_25224\\2370332485.py:3: FutureWarning: \n",
+      "C:\\Users\\BAKU\\AppData\\Local\\Temp\\ipykernel_20984\\2370332485.py:3: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -756,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -835,14 +949,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\BAKU\\AppData\\Local\\Temp\\ipykernel_25224\\1882095404.py:6: FutureWarning: \n",
+      "C:\\Users\\BAKU\\AppData\\Local\\Temp\\ipykernel_20984\\1882095404.py:6: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -912,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -939,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -950,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -964,11 +1078,11 @@
       "3      6  114   0   0    0   0.0  0.189   26          1\n",
       "4      8  109  76  39  114  27.9  0.640   31          0\n",
       "..   ...  ...  ..  ..  ...   ...    ...  ...        ...\n",
-      "623    3  107  62  13   48  22.9  0.678   23          0\n",
-      "624    3  132  80   0    0  34.4  0.402   44          0\n",
-      "625    5  109  62  41  129  35.8  0.514   25          1\n",
-      "626    0  135  68  42  250  42.3  0.365   24          1\n",
-      "627    9  102  76  37    0  32.9  0.665   46          0\n",
+      "623    7  147  76   0    0  39.4  0.257   43          1\n",
+      "624    5  166  72  19  175  25.8  0.587   51          1\n",
+      "625    5  189  64  33  325  31.2  0.583   29          1\n",
+      "626    4  117  62  12    0  29.7  0.380   30          1\n",
+      "627    1  181  64  30  180  34.1  0.328   38          0\n",
       "\n",
       "[628 rows x 9 columns]\n"
      ]
@@ -980,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Now let's pass our balance train data set through the pipline"
+    "# Now let's fit our balance train data set to the pipline"
    ]
   },
   {
